# imgtool

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  run_and_build.sh
common/: CMakeLists.txt  binario.cpp  binario.hpp  info.cpp  info.hpp  progargs.cpp  progargs.hpp
ftest-aos/: ftest-compress.cpp  readme.txt
ftest-soa/: compare_cppm.sh  compare_images.sh  tester.cpp
imgaos/: CMakeLists.txt  imageaos.cpp  imageaos.hpp
imgsoa/: CMakeLists.txt  imagesoa.cpp  imagesoa.hpp
imtool-aos/: main.cpp
imtool-soa/: main.cpp
input/: README.txt
output/: README.txt
utest-common/: CMakeLists.txt  info-utests.cpp  utest-common.cpp
utest-img-soa/: CMakeLists.txt  compress-utests.cpp  cutfreq-utests.cpp  maxlevel-utests.cpp  resize-utests.cpp  utest-img-soa.cpp
utest-imgaos/: CMakeLists.txt  compress-utests.cpp  cutfreq-utests.cpp  maxlevel-utests.cpp  resize-utests.cpp  unitest-imgaos.cpp
